# warc-c

./: .clang-format  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
include/: warc.h
include/warc-c/: bytes_field.h  warc-c.h  warc_entry.h  warc_file.h  warc_headers.h  warc_parser.h
src/: bytes_field.c  warc-c.c  warc.c  warc.l  warc.lex  warc.y  warc_entry.c  warc_file.c  warc_headers.c  warc_parser.c
tests/: .gitignore  CMakeLists.txt  runner.cpp  test_basic_parsing.cpp  util.hpp.in
tests/files/examples/: bbc.warc  test.warc
